create global navbar layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,28 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand">
+      <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">DCCanvas</span>
+        <%# <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"/>
+          <span class="navbar-toggler-icon"></span>
+        </button> %>
+        <div class="collapse navbar-collapse justify-content-end">
+          <ul class="navbar-nav me-2 mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a href="#" class="nav-link">Cursos</a>
+            </li>
+          </ul>
+          <form>
+            <button class="btn btn-outline-primary me-2">Ingresa</button>
+        </form>
+        </div>
+
+        
+      </div>
+      </div>
+    </nav>    
+
     <%= yield %>
   </body>
 </html>
