--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <p class="notice"><% notice %></p>
+    <p class="alert"><% alert %></p>
     <nav class="navbar navbar-expand">
       <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">DCCanvas</span>
@@ -19,10 +21,14 @@
             <li class="nav-item">
               <a href="#" class="nav-link">Cursos</a>
             </li>
+            <li>
+              <% if current_user %>
+                <li><%= link_to "Cerrar sesión", destroy_user_session_path, data: { turbo_method: :"delete" }, :class => "btn btn-outline-secondary me-2" %></li>
+              <% else %>
+                <li><%= link_to 'Ingresar', new_user_session_url, :class => "btn btn-outline-primary me-2" %></li>
+              <% end %>
+            </li>
           </ul>
-          <form>
-            <button class="btn btn-outline-primary me-2">Ingresa</button>
-        </form>
         </div>
       </div>
       </div>
