--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -15,7 +15,7 @@
       <th>Título</th>
       <th>Descripción</th>
       <th>Profesor</th>
-      <% if current_user && current_user.user_role_id == 1 %> <!-- Solo para estudiantes -->
+      <% if current_user&.user_role_id == UserRole.find_by(name: "Student")&.id %>
         <th>Acciones</th>
       <% end %>
     </tr>
@@ -27,14 +27,12 @@
         <td><%= course.description %></td>
         <td><%= course.teacher.name if course.teacher.present? %></td>
         
-        <% if current_user && current_user.user_role_id == 1 %> <!-- Solo para estudiantes -->
+        <% if current_user&.user_role_id == UserRole.find_by(name: "Student")&.id %>
           <td>
-            <%= link_to "Solicitar unirse", request_join_course_path(course), method: :post, class: "btn btn-primary" %>
+            <%= link_to "Solicitar unirse", join_course_path(course), method: :post, class: "btn btn-success" %>
           </td>
         <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-
