--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   </head>
 
   <body>
-    <p class="notice"><% notice %></p>
-    <p class="alert"><% alert %></p>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <nav class="navbar navbar-expand">
       <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">DCCanvas</span>
@@ -21,19 +21,24 @@
             <li class="nav-item">
               <%= link_to "Cursos", courses_path, class: "nav-link" %>
             </li>
+
+            <% if current_user&.user_role_id == UserRole.find_by(name: "Student")&.id %>
+              <li class="nav-item">
+                <%= link_to "Ver Solicitudes", requests_path, class: "nav-link" %>
+              </li>
+            <% end %>
+
             <li>
               <% if current_user %>
-                <li><%= link_to "Cerrar sesión", destroy_user_session_path, data: { turbo_method: :"delete" }, :class => "btn btn-outline-secondary me-2" %></li>
+                <li><%= link_to "Cerrar sesión", destroy_user_session_path, data: { turbo_method: :"delete" }, class: "btn btn-outline-secondary me-2" %></li>
               <% else %>
-                <li><%= link_to 'Ingresar', new_user_session_url, :class => "btn btn-outline-primary me-2" %></li>
+                <li><%= link_to 'Ingresar', new_user_session_url, class: "btn btn-outline-primary me-2" %></li>
               <% end %>
             </li>
           </ul>
         </div>
       </div>
-      </div>
     </nav> 
-   
 
     <%= yield %>
   </body>
