--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -25,7 +25,7 @@
       <tr>
         <td><%= course.title %></td>
         <td><%= course.description %></td>
-        <td><%= course.teacher.name if course.teacher.present? %></td>
+        <td><%= course.teacher.user.name if course.teacher.present? %></td>
         
         <% if current_user&.user_role_id == UserRole.find_by(name: "Student")&.id %>
           <td>
