--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,21 @@
  */
 
  @import "bootstrap";
+ 
+ .return-home {
+    text-align: right;
+  }
+  
+  .close-button {
+    font-size: 24px;
+    color: #ff0000;
+    text-decoration: none;
+    border: none;
+    background: none;
+    cursor: pointer;
+  }
+  
+  .close-button:hover {
+    color: #ff5050;
+  }
+  
