--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,6 +8,9 @@
     </div>
   <% end %>
 </div>
+<div class="return-home">
+  <%= link_to "✖", root_path, class: "close-button", title: "Volver a la página principal" %>
+</div>
 
 <table class="table">
   <thead>
@@ -29,8 +32,7 @@
         
         <% if current_user&.user_role_id == UserRole.find_by(name: "Student")&.id %>
           <td>
-            <%= link_to "Solicitar unirse", join_course_path(course), method: :post, class: "btn btn-success" %>
-          </td>
+          <%= button_to "Solicitar unirse", request_join_course_path(course), method: :post, class: "btn btn-success" %>
         <% end %>
       </tr>
     <% end %>
