--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,33 +13,25 @@
   <body>
     <nav class="navbar navbar-expand">
       <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">DCCanvas</span>
+        <%= link_to "DCCanvas", root_path, :class => "navbar-brand mb-0 h1" %>
         <div class="collapse navbar-collapse justify-content-end">
           <ul class="navbar-nav me-2 mb-2 mb-lg-0">
-          <!-- Enlace de Inicio -->
-          <li class="nav-item">
-            <%= link_to "Inicio", root_path, class: "nav-link" %>
-          </li>
-          <!-- Enlace de Cursos -->
-          <li class="nav-item">
-            <%= link_to "Cursos", "#", class: "nav-link" %>
-          </li>
-          <% if current_user %>
-            <!-- Enlace de Mi perfil -->
+            <!-- Enlace de Cursos -->
             <li class="nav-item">
-              <%= link_to "Mi perfil", user_settings_path, class: "nav-link" %>
-            </li>
-            <!-- Enlace de Cerrar sesión -->
-            <li class="nav-item">
-              <%= link_to "Cerrar sesión", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
-            </li>
-          <% else %>
-            <!-- Enlace de Ingresar (si no está autenticado) -->
-            <li class="nav-item">
-              <%= link_to 'Ingresar', new_user_session_url, class: "nav-link" %>
-            </li>
+              <%= link_to "Cursos", "#", class: "nav-link" %>
+            </li>        
+            <% if current_user %>
+              <li class="nav-item">
+                <%= link_to "Mi perfil", user_settings_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Cerrar sesión", destroy_user_session_path, data: { turbo_method: :delete }, :class => "btn btn-outline-secondary me-2" %>
+              </li>
+            <% else %>
+              <li class="nav-item">
+               <%= link_to 'Ingresar', new_user_session_url, :class => "btn btn-outline-primary me-2" %>
+              </li>
             <% end %>
-            </li>
           </ul>
         </div>
       </div>
