--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,52 +1,59 @@
-<h3>Sign up</h3>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="container d-flex justify-content-center align-items-center flex-column pt-5">
+  <div class="card" style="width: 30rem">
+    <div class="card-body">
+      <h2 class="card-title mb-5">Sign up</h2>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name%>
-  </div>
-  
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+        <div class="mb-3">
+          <%= f.label :name, :class => "form-label" %><br />
+          <%= f.text_field :name, :class => "form-control"%>
+        </div>
+        
+        <div class="mb-3">
+          <%= f.label :email, :class => "form-label" %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", :class => "form-control" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :phone %><br />
-    <%= f.text_field :phone %>
-  </div>
+        <div class="mb-3">
+          <%= f.label :phone, :class => "form-label" %><br />
+          <%= f.text_field :phone, :class => "form-control" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+        <div class="mb-3">
+          <%= f.label :password, :class => "form-label" %>
+          <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "new-password", :class => "form-control" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+        <div class="mb-3">
+          <%= f.label :password_confirmation, :class => "form-label" %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", :class => "form-control" %>
+        </div>
 
-  <div class="form-group">
-    <label for="user_role">Select Role:</label>
-    <div>
-      <%# make this radio button active by default %>
+        <div class="form-group mb-5">
+          <div class="form-check">
+            <%= f.radio_button :user_role_id, UserRole.find_by(name: 'Student').id, :class => "form-check-input"  %> 
+            <%= f.label :user_role_id, 'Estudiante' %>
+          </div>
+          <div class="form-check">
+            <%= f.radio_button :user_role_id, UserRole.find_by(name: 'Teacher').id, :class => "form-check-input" %>
+            <%= f.label :user_role_id, 'Profesor' %>
+          </div>
+        </div>
 
-      <%= f.radio_button :user_role_id, UserRole.find_by(name: 'Student').id  %> 
-      <%= f.label :user_role_id, 'Estudiante' %>
-      <%= f.radio_button :user_role_id, UserRole.find_by(name: 'Teacher').id %>
-      <%= f.label :user_role_id, 'Profesor' %>
+        <div class="actions mb-3">
+          <%= f.submit "Sign up", :class => "btn btn-primary" %>
+        </div>
+      <% end %>
     </div>
   </div>
 
+  <%= render "devise/shared/links" %>
+</div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+
