--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
     <h1>Home</h1>
 
     <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-9">
             <h5>Tus cursos</h5>
             <% @courses.each do |course| %>
                 <div class="card mb-3">
@@ -13,8 +13,12 @@
                 </div>
             <% end %>
         </div>
-        <div class="col">
+        <div class="col-sm">
             <h5>Acciones</h5>
+            <% if current_user.teacher.present? %>
+                <%= link_to "Crear evaluación", new_course_path, :class => "btn btn-outline-secondary w-100 mb-2 fluid" %>
+                <%= link_to "Crear curso", new_course_path, :class => "btn btn-outline-secondary w-100 mb-2 fluid" %>
+            <% end%>
             
         </div>
     </div>
