--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse justify-content-end">
           <ul class="navbar-nav me-2 mb-2 mb-lg-0">
             <li class="nav-item">
-              <%= link_to "Cursos", courses_path, class: "nav-link" %>
+              <%= link_to "Busca cursos", courses_path, class: "nav-link" %>
             </li>
             <% if current_user %>
               <% if current_user.user_role_id == UserRole.find_by(name: "Student")&.id %>
