add linkt to find courses in hero section

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,6 +2,6 @@
     <h1 class="display-5 fw-bold text-body-emphasis">Una aplicación, todas tus clases</h1>
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Utiliza DCCanvas para aprender y enseñar como nunca antes. Transmite y adquiere conocimiento, conecta con tu comunidad educacional.</p>
-        <button type="button" class="btn btn-primary btn-lg px-4">Busca tus cursos!</button>
+        <%= link_to "Busca tus cursos!", courses_path, class: "btn btn-primary btn-lg px-4" %>
     </div>
 </section>
