Upload material page Creat

--- a/app/views/courses/show_teacher.html.erb
+++ b/app/views/courses/show_teacher.html.erb
@@ -39,7 +39,7 @@
   <div class="row mt-4">
     <div class="d-flex justify-content-between align-items-center mb-2">
         <h3 class="mb-0">Contenido</h3>
-        <a href="#" class="btn btn-success">Subir Material</a>
+        <%= link_to "Subir Material", upload_material_course_path(@course), class: "btn btn-success" %>
     </div>
 
       <ul class="list-group">
