--- a/app/views/courses/upload_material.html.erb
+++ b/app/views/courses/upload_material.html.erb
@@ -1,11 +1,10 @@
 <div class="container mt-5">
   <h1>Subir Material</h1>
-  
-  <%= form_with url: process_upload_material_course_path(@course), local: true, html: { multipart: true } do |f| %>
+  <%= form_with(model: [@course, @course.materials.build], url: process_upload_material_course_path(@course), local: true) do |f| %> 
     <div class="form-group">
       <%= f.label :name, "Nombre" %>
       <%= f.text_field :name, class: "form-control", placeholder: "Nombre del material" %>
-    </div>
+     </div>
 
     <div class="form-group mt-3">
       <%= f.label :description, "Descripción" %>
@@ -17,13 +16,8 @@
       <%= f.collection_select :material_type_id, MaterialType.all, :id, :name, { prompt: 'Selecciona un tipo' }, { class: "form-control" } %>
     </div>
 
-    <div class="form-group mt-3">
-      <%= f.label :file, "Subir Archivo" %>
-      <%= f.file_field :file, class: "form-control" %>
-    </div>
-
     <div class="mt-4 d-flex justify-content-between">
-      <%= link_to "Back", course_path(@course), class: "btn btn-secondary" %> 
+      <%= link_to "Volver", course_path(@course), class: "btn btn-secondary" %> 
       <%= f.submit "Guardar", class: "btn btn-success" %>
     </div>
   <% end %>
