--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,9 +8,6 @@
     </div>
   <% end %>
 </div>
-<div class="return-home">
-  <%= link_to "✖", root_path, class: "close-button", title: "Volver a la página principal" %>
-</div>
 
 <table class="table">
   <thead>
@@ -28,14 +25,14 @@
       <tr>
         <td><%= course.title %></td>
         <td><%= course.description %></td>
-        <td><%= course.teacher.user.name if course.teacher.present? %></td>
+        <td><%= course.teacher.name if course.teacher.present? %></td>
         
         <% if current_user&.user_role_id == UserRole.find_by(name: "Student")&.id %>
           <td>
-          <%= button_to "Solicitar unirse", request_join_course_path(course), method: :post, class: "btn btn-success" %>
+            <%= link_to "Solicitar unirse", join_course_path(course), method: :post, class: "btn btn-success" %>
+          </td>
         <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
-
