select automatically evaluation course if entered from its page

--- a/app/views/courses/show_teacher.html.erb
+++ b/app/views/courses/show_teacher.html.erb
@@ -13,7 +13,7 @@
     <div class="col-md-12">
     <div class="d-flex justify-content-between align-items-center mb-2">
     <h3 class="mb-0">Tests</h3>
-    <%= link_to 'Crear Evaluación', new_evaluation_path, class: 'btn btn-secondary' %>
+    <%= link_to 'Crear Evaluación', new_evaluation_path(course_id: @course.id), class: 'btn btn-secondary' %>
   </div>
   
       <ul class="list-group">
