add access to course view in course list

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -31,7 +31,7 @@
   <tbody>
     <% @courses.each do |course| %>
       <tr>
-        <td><%= course.title %></td>
+        <td><%= link_to course.title, course_path(course) %></td>
         <td><%= course.description %></td>
         <td><%= course.teacher.user.name if course.teacher.present? %></td>
         
