--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,15 @@
   <body>
     <nav class="navbar navbar-expand">
       <div class="container-fluid">
-        <%= link_to "DCCanvas", root_path, :class => "navbar-brand mb-0 h1" %>
+        <% if current_user %>
+          <%= link_to "DCCanvas", home_path, :class => "navbar-brand mb-0 h1" %>
+        <% else %>
+          <%= link_to "DCCanvas", root_path, :class => "navbar-brand mb-0 h1" %>
+        <% end %>
         <div class="collapse navbar-collapse justify-content-end">
           <ul class="navbar-nav me-2 mb-2 mb-lg-0">
             <li class="nav-item">
-              <%= link_to "Cursos", courses_path, class: "nav-link" %>
+              <%= link_to "Busca cursos", courses_path, class: "nav-link" %>
             </li>
             <% if current_user %>
               <% if current_user.user_role_id == UserRole.find_by(name: "Student")&.id %>
