--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,9 +22,11 @@
             <% end%>
 
             <% if current_user.student.present? %>
-                <%= link_to "Realizar reseñas", new_review_path, :class => "btn btn-outline-secondary w-100 mb-2 fluid" %>
+                <%= link_to "Realizar reseña de Profesor", new_teacher_review_path, class: "btn btn-outline-secondary w-100 mb-2 fluid" %>
+                <%= link_to "Realizar reseña de Curso", new_course_review_path, class: "btn btn-outline-secondary w-100 mb-2 fluid" %>
+
             <% end %>
-            
+
         </div>
     </div>
     
