--- a/app/views/courses/show_student.html.erb
+++ b/app/views/courses/show_student.html.erb
@@ -25,7 +25,7 @@
             
             <% if current_user&.student?%>
               <% if current_user.student.enrolled_in_course? @course %>
-                <%= link_to 'Realizar', evaluation_path(evaluation), class: 'btn btn-outline-secondary' %>
+              <%= link_to 'Realizar', show_student_evaluation_path(evaluation), class: 'btn btn-outline-secondary' %>
               <% end%>
             <% end%>
             </li>
