--- a/app/views/courses/show_teacher.html.erb
+++ b/app/views/courses/show_teacher.html.erb
@@ -26,7 +26,7 @@
               <small>Día: <%= evaluation.start_date.strftime('%d/%m/%Y') %></small>
             </div>
             <div class="d-flex">
-              <%= link_to 'Ver preguntas', evaluation_path(evaluation), class: 'btn btn-outline-primary btn-sm me-2' %>
+              <%= link_to 'Ver preguntas', show_teacher_evaluation_path(evaluation), class: 'btn btn-outline-primary btn-sm me-2' %>
               <a href="" class='btn btn-outline-primary btn-sm me-2'>Calificar respuestas</a>
               <a href="#" class="btn btn-outline-danger btn-sm">Eliminar</a>
             </div>
