--- a/app/views/courses/show_teacher.html.erb
+++ b/app/views/courses/show_teacher.html.erb
@@ -32,7 +32,7 @@
               <% else %>
                 <button class= "btn btn-outline-primary btn-sm me-2" disabled>Calificar respuestas</button>
               <% end %>
-              <a href="#" class="btn btn-outline-danger btn-sm">Eliminar</a>
+              <%= link_to 'Eliminar', evaluation_path(evaluation), data: { turbo_method: :delete, confirm: '¿Estás seguro de que deseas eliminar esta evaluación?' }, class: 'btn btn-outline-danger btn-sm' %>
             </div>
           </li>
         <% end %>
