--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -39,6 +39,12 @@
           <td>
           <%= button_to "Solicitar unirse", request_join_course_path(course), method: :post, class: "btn btn-success" %>
         <% end %>
+
+        <% if current_user&.user_role_id == UserRole.find_by(name: "Admin")&.id %>
+          <td>
+            <%= button_to "Eliminar", course_path(course), method: :delete, data: { confirm: "¿Estás seguro de que quieres eliminar este curso?" }, class: "btn btn-danger" %>
+          </td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
