Implementacion gestion de reseñas

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,6 +28,8 @@
 
             <% if current_user.admin.present? %>
                 <%= link_to "Administrar Usuarios", admin_view_users_path, class: "btn btn-outline-secondary w-100 mb-2 fluid" %>
+                <%= link_to "Gestionar Reseñas de Profesores", admin_teacher_reviews_path, class: "btn btn-outline-secondary w-100 mb-2 fluid" %> <!-- Botón para gestionar reseñas -->
+                <%= link_to "Gestionar Reseñas de Cursos", admin_course_reviews_path, class: "btn btn-outline-secondary w-100 mb-2 fluid" %> <!-- Botón para gestionar reseñas de cursos -->
             <% end %>
 
 
