--- a/app/views/courses/upload_material.html.erb
+++ b/app/views/courses/upload_material.html.erb
@@ -15,6 +15,11 @@
       <%= f.label :material_type_id, "Tipo de Material" %>
       <%= f.collection_select :material_type_id, MaterialType.all, :id, :name, { prompt: 'Selecciona un tipo' }, { class: "form-control" } %>
     </div>
+  
+    <div class="form-group mt-3">
+      <%= f.label :pdf_files, "Archivos PDF" %>
+      <%= f.file_field :pdf_files, multiple: true, accept: 'application/pdf', class: "form-control" %>
+    </div>
 
     <div class="mt-4 d-flex justify-content-between">
       <%= link_to "Volver", course_path(@course), class: "btn btn-secondary" %> 
