--- a/app/views/courses/show_teacher.html.erb
+++ b/app/views/courses/show_teacher.html.erb
@@ -53,7 +53,7 @@
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 <span><%= index + 1 %>. <%= material.name %></span>
                 <div class="d-flex">
-                  <a href="#" class="btn btn-outline-primary btn-sm me-2">Ver</a>
+                 <a href="<%= material_path(material) %>" class="btn btn-outline-primary btn-sm me-2">Ver</a>
                   <a href="#" class="btn btn-outline-danger btn-sm">Eliminar</a>
                 </div>
               </li>
