--- a/app/views/materials/upload.html.erb
+++ b/app/views/materials/upload.html.erb
@@ -1,6 +1,9 @@
 <div class="container mt-5">
   <h1>Subir Material</h1>
-  <%= form_with(model: [@course, @material], local: true, multipart: true) do |f| %> 
+  
+  <%= render 'materials/material_errors', object: @material %>
+  
+  <%= form_with(model: [@course, @material], local: true, multipart: true) do |f| %>
     <div class="form-group">
       <%= f.label :name, "Nombre" %>
       <%= f.text_field :name, class: "form-control", placeholder: "Nombre del material" %>
