--- a/app/views/courses/show_student.html.erb
+++ b/app/views/courses/show_student.html.erb
@@ -62,7 +62,7 @@
 
                 <span><%= index + 1 %>. <%= material.name %></span>
     
-                <a href="#" class="btn btn-primary btn-sm">Ver</a>
+                <a href="<%= material_path(material) %>" class="btn btn-outline-primary btn-sm me-2">Ver</a>
                 </li>
             <% end %>
             <% else %>
