--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -1,22 +1,37 @@
 <section class="container-fluid p-4">
   <div class="row mb-4">
     <div class="col-md-12">
-      <h1 class="mb-2"><%= @material.name %></h1>
-      <div class="card">
+      <h1 class="mb-3"><%= @material.name %></h1>
+
+      <div class="card mb-4">
         <div class="card-body">
-          <p class="card-text"><strong>Descripción:</strong> <%= @material.description %></p>
-          <p class="card-text"><strong>Tipo:</strong> <%= @material.material_type.name %></p>
           <p class="card-text"><strong>Curso:</strong> <%= @material.course.title %></p>
-          
-          <% if @material.document.attached? %>
-            <div class="mt-3">
-              <h6>Documento adjunto:</h6>
-              <%= link_to "Ver documento", rails_blob_path(@material.document, disposition: "inline"), class: "btn btn-info", target: "_blank" %>
-            </div>
-          <% end %>
-          
-          <%= link_to "Volver al curso", course_path(@material.course), class: "btn btn-primary mt-3" %>
+          <p class="card-text"><strong>Tipo:</strong> <%= @material.material_type.name %></p>
+          <p class="card-text"><strong>Descripción:</strong> <%= @material.description %></p>
         </div>
+      </div>
+
+      <% if @material.document.attached? %>
+        <div class="card mb-4">
+          <div class="card-body">
+            <h5 class="card-title">Documento</h5>
+            <ol class="list-group list-group-numbered">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span class="me-auto ms-3"><%= @material.document.filename.to_s %></span>
+                <div class="d-flex gap-2">
+                  <%= link_to "Ver", rails_blob_path(@material.document, disposition: "inline"), 
+                      class: "btn btn-outline-primary btn-sm", target: "_blank" %>
+                  <%= link_to "Descargar", rails_blob_path(@material.document, disposition: "attachment"), 
+                      class: "btn btn-outline-success btn-sm" %>
+                </div>
+              </li>
+            </ol>
+          </div>
+        </div>
+      <% end %>
+
+      <div class="d-flex justify-content-end">
+        <%= link_to "Volver al curso", course_path(@material.course), class: "btn btn-primary" %>
       </div>
     </div>
   </div>
