--- a/app/views/materials/upload.html.erb
+++ b/app/views/materials/upload.html.erb
@@ -3,7 +3,7 @@
   
   <%= render 'materials/material_errors', object: @material %>
   
-  <%= form_with(model: [@course, @material], local: true, multipart: true) do |f| %>
+  <%= form_with(model: [@course, @material], local: true, multipart: true) do |f| %> 
     <div class="form-group">
       <%= f.label :name, "Nombre" %>
       <%= f.text_field :name, class: "form-control", placeholder: "Nombre del material" %>
@@ -20,8 +20,9 @@
     </div>
   
     <div class="form-group mt-3">
-      <%= f.label :document, "Archivo" %>
-      <%= f.file_field :document, class: "form-control" %>
+      <%= f.label :documents, "Archivos" %>
+      <%= f.file_field :documents, multiple: true, class: "form-control" %>
+      <small class="text-muted">Puedes seleccionar múltiples archivos</small>
     </div>
 
     <%= f.hidden_field :course_id, value: @course.id %>
