--- a/app/views/courses/show_teacher.html.erb
+++ b/app/views/courses/show_teacher.html.erb
@@ -53,8 +53,10 @@
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 <span><%= index + 1 %>. <%= material.name %></span>
                 <div class="d-flex">
-                 <a href="<%= material_path(material) %>" class="btn btn-outline-primary btn-sm me-2">Ver</a>
-                  <a href="#" class="btn btn-outline-danger btn-sm">Eliminar</a>
+                  <a href="<%= material_path(material) %>" class="btn btn-outline-primary btn-sm me-2">Ver</a>
+                  <%= link_to "Eliminar", course_material_path(@course, material), 
+                      data: { turbo_method: :delete }, 
+                      class: "btn btn-outline-danger btn-sm" %>
                 </div>
               </li>
             <% end %>
