--- a/app/views/evaluations/grade_answers.html.erb
+++ b/app/views/evaluations/grade_answers.html.erb
@@ -7,9 +7,9 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h1 class="mb-2"><%= @evaluation.name %> - Respuestas de <%= @student.user.name %></h1>
+      <h1 class="mb-2"><%= @evaluation.name %> - Respuestas de <%= @current_student.user.name %></h1>
       <p><strong>Curso:</strong> <%= @evaluation.course.title %></p>
-      <p><strong>Estudiante:</strong> <%= @student.user.name %></p>
+      <p><strong>Estudiante:</strong> <%= @current_student.user.name %></p>
       <p><strong>Puntos:</strong> <%= @total_points %> de un total de <%= @max_points %> puntos</p>
     </div>
   </div>
@@ -18,7 +18,7 @@
   <div class="row mt-4">
     <div class="col-md-12">
       <h3>Respuestas</h3>
-      <%= form_with url: update_grades_evaluation_path(@evaluation, student_id: @student.id), method: :patch, local: true do |form| %>
+      <%= form_with url: update_grades_evaluation_path(@evaluation, student_id: @current_student.id), method: :patch, local: true do |form| %>
         <ul class="list-group">
           <% @answers.each do |answer| %>
             <li class="list-group-item">
@@ -45,45 +45,47 @@
     <div class="col-md-12 d-flex justify-content-center align-items-center flex-column">
       <h4>Navegación: respuestas por alumno</h4>
       <p>Total de estudiantes que han respondido: <%= @students.count %></p>
-      <ul class="pagination">
-        <% current_index = @students.index(@student) %>
-        <% previous_student = current_index > 0 ? @students[current_index - 1] : nil %>
-        <% next_student = current_index < @students.size - 1 ? @students[current_index + 1] : nil %>
+      <% if @students.count > 0 %>
+        <ul class="pagination">
+          <% current_index = @students.index(@current_student) %>
+          <% previous_student = current_index > 0 ? @students[current_index - 1] : nil %>
+          <% next_student = current_index < @students.size - 1 ? @students[current_index + 1] : nil %>
 
-        <% if previous_student %>
-          <li class="page-item">
-            <%= link_to grade_answers_evaluation_path(@evaluation, student_id: previous_student.id), class: "page-link" do %>
-              <i class="bi bi-arrow-left"></i>
-            <% end %>
-          </li>
-        <% else %>
-          <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
-              <i class="bi bi-arrow-left"></i>
-            </a>
-          </li>
-        <% end %>
+          <% if previous_student %>
+            <li class="page-item">
+              <%= link_to grade_answers_evaluation_path(@evaluation, student_id: previous_student.id), class: "page-link" do %>
+                <i class="bi bi-arrow-left"></i>
+              <% end %>
+            </li>
+          <% else %>
+            <li class="page-item disabled">
+              <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
+                <i class="bi bi-arrow-left"></i>
+              </a>
+            </li>
+          <% end %>
 
-        <% @students.each do |student| %>
-          <li class="page-item <%= 'active' if student == @student %>">
-            <%= link_to student.user.name, grade_answers_evaluation_path(@evaluation, student_id: student.id), class: "page-link" %>
-          </li>
-        <% end %>
+          <% @students.each do |student| %>
+            <li class="page-item <%= 'active' if student == @student %>">
+              <%= link_to student.user.name, grade_answers_evaluation_path(@evaluation, student_id: student.id), class: "page-link" %>
+            </li>
+          <% end %>
 
-        <% if next_student %>
-          <li class="page-item">
-            <%= link_to grade_answers_evaluation_path(@evaluation, student_id: next_student.id), class: "page-link" do %>
-              <i class="bi bi-arrow-right"></i>
-            <% end %>
-          </li>
-        <% else %>
-          <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
-              <i class="bi bi-arrow-right"></i>
-            </a>
-          </li>
-        <% end %>
-      </ul>
+          <% if next_student %>
+            <li class="page-item">
+              <%= link_to grade_answers_evaluation_path(@evaluation, student_id: next_student.id), class: "page-link" do %>
+                <i class="bi bi-arrow-right"></i>
+              <% end %>
+            </li>
+          <% else %>
+            <li class="page-item disabled">
+              <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
+                <i class="bi bi-arrow-right"></i>
+              </a>
+            </li>
+          <% end %>
+        </ul>
+      <% end %>
     </div>
   </div>
 </section>
